--- a/css/main.css
+++ b/css/main.css
@@ -21,13 +21,13 @@ b {
 .horizontal-divider {
     width: 80%;
     margin-bottom: 2em;
+    border-color: white;
+    border-top: 1px white;
 }
 
 .parent {
     position: relative;
     overflow: hidden;
-
-    background-color: blueviolet;
 }
 
 .child {
