--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 p,b, span, th {
-    font-family: 'Oswald';
+    font-family: 'Oswald', 'Verdana';
     color: white;
 }
 
@@ -67,15 +67,20 @@ iframe {
     display: none;
 }
 
-.settings-icon {
+.icons {
     position: absolute;
-    right: 10px;
+    right: 0;
     top: 10px;
+}
+
+.icon {
     width: 2em;
+
+    margin-right: 1em;
 
     opacity: 0.4;
 }
 
-.settings-icon:hover {
+.icon:hover {
     opacity: 0.8;
 }
